# custom_wx_icons_humanity

./: .bandit  .bumpversion.cfg  .gitignore  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  build_icon_themes.sh  build_script.sh  build_tools.py  create_custom_theme.py  formate.toml  git_helper.yml  gnome_icon_builder.py  icon_wall.py  icon_wall.wxg  lint_roller.sh  make_importable.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  test_frame.py  test_frame.wxg  tox.ini
.ci/: copy_pypi_2_github.py  travis_deploy.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
adwaita/: .bumpversion.cfg  COPYING  MANIFEST.in  README.rst  __pkginfo__.py  build_icons_from_src.py  requirements.txt  setup.py
adwaita/wx_icons_adwaita/: __init__.py
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  make_importable.py  requirements.txt  usage.rst
hicolor/: .bumpversion.cfg  COPYING  MANIFEST.in  README.rst  build_icons_from_src.py  build_output.txt  requirements.txt  setup.py
hicolor/wx_icons_hicolor/: __init__.py  (+5 more)
humanity/: .bumpversion.cfg  MANIFEST.in  README.rst  requirements.txt  setup.py
suru/: .bumpversion.cfg  COPYING  MANIFEST.in  README.rst  build_icons_from_src.py  requirements.txt  setup.py
tango/: .bumpversion.cfg  COPYING  MANIFEST.in  README.rst  requirements.txt  setup.py
wx_icons_adwaita/: COPYING  __init__.py  build_icons_from_src.py
wx_icons_hicolor/: COPYING  __init__.py
wx_icons_humanity/: AUTHORS  __init__.py
wx_icons_suru/: COPYING  __init__.py  build_icons_from_src.py
wx_icons_tango/: COPYING
(+12 files in other folders)
