# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = wx_icons_humanity
version = 0.1.3
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU General Public License v2 (GPLv2)
keywords = wxpython, icons, iconset, humanity
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/custom_wx_icons_humanity
project_urls =
    Documentation = https://custom-wx-icons-humanity.readthedocs.io/en/latest
    Issue Tracker = https://github.com/domdfcoding/custom_wx_icons_humanity/issues
    Source Code = https://github.com/domdfcoding/custom_wx_icons_humanity
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Desktop Environment :: Gnome
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Typing :: Typed

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*
